# poppy

./: .coveragerc  .gitignore  .gitreview  .testr.conf  AUTHORS.rst  Dockerfile  HACKING.rst  README.md  README.rst  README.rst~  apiary.apib  kill_poppy.sh  openstack-common.conf  pylintrc  requirements.txt  run_poppy.sh  setup.cfg  setup.py  tox.ini
cdn/: bootstrap.py
cdn/common/: cli.py  decorators.py  errors.py
cdn/manager/base/: __init__.py  controller.py  driver.py  providers.py  services.py  v1.py
cdn/manager/default/: controllers.py  driver.py  services.py  v1.py
cdn/model/helpers/: origin.py  restriction.py
cdn/openstack/common/: excutils.py  fileutils.py  gettextutils.py  jsonutils.py  lockutils.py  log.py  strutils.py
cdn/provider/: __init__.py  base.py
cdn/storage/: __init__.py  base.py
cdn/tests/: __init__.py  config.py  test_functional.py
cdn/transport/: __init__.py  app.py  base.py
cmd/: server.py
cover/: index.html  poppy_bootstrap_py.html  poppy_common__i18n_py.html  poppy_common_decorators_py.html  poppy_common_errors_py.html  poppy_common_py.html  poppy_common_uri_py.html  poppy_common_util_py.html  poppy_distributed_task_base_controller_py.html  poppy_distributed_task_base_driver_py.html  poppy_distributed_task_base_py.html  poppy_distributed_task_base_services_py.html  poppy_distributed_task_py.html  poppy_distributed_task_taskflow_controllers_py.html  poppy_distributed_task_taskflow_driver_py.html  poppy_distributed_task_taskflow_flow_create_service_py.html  poppy_distributed_task_taskflow_flow_create_ssl_certificate_py.html  poppy_distributed_task_taskflow_flow_delete_service_py.html  poppy_distributed_task_taskflow_flow_delete_ssl_certificate_py.html  poppy_distributed_task_taskflow_flow_purge_service_py.html  poppy_distributed_task_taskflow_flow_py.html  poppy_distributed_task_taskflow_flow_recreate_ssl_certificate_py.html  poppy_distributed_task_taskflow_flow_update_service_py.html  poppy_distributed_task_taskflow_flow_update_service_state_py.html  poppy_distributed_task_taskflow_py.html  poppy_distributed_task_taskflow_services_py.html  poppy_distributed_task_taskflow_task_common_py.html  poppy_distributed_task_taskflow_task_create_service_tasks_py.html  poppy_distributed_task_taskflow_task_create_ssl_certificate_tasks_py.html  poppy_distributed_task_taskflow_task_delete_service_tasks_py.html  poppy_distributed_task_taskflow_task_delete_ssl_certificate_tasks_py.html  poppy_distributed_task_taskflow_task_purge_service_tasks_py.html  poppy_distributed_task_taskflow_task_py.html  poppy_distributed_task_taskflow_task_update_service_state_tasks_py.html  poppy_distributed_task_taskflow_task_update_service_tasks_py.html  poppy_distributed_task_utils_memoized_controllers_py.html  poppy_distributed_task_utils_py.html  poppy_dns_base_controller_py.html  poppy_dns_base_driver_py.html  poppy_dns_base_py.html  (+210 more)
doc/: requirements.txt
doc/source/: api.rst  conf.py  gettingstarted_contributing.rst  gettingstarted_gerrit.rst  gettingstarted_installing.rst  gettingstarted_testing.rst  glossary.rst  index.rst  ops.rst  poppy.manager.rst  poppy.model.rst  poppy.provider.rst  poppy.rst  poppy.storage.rst  poppy.transport.rst  provider_details.rst
docker/: Dockerfile  README.md
docker/api/: Dockerfile  README.md  poppy-sample.conf  poppy.conf  poppy_sample_mocked.conf  startup.sh  uwsgi.ini
docker/api-cdn/: Dockerfile  cdn.conf  logging.conf  uwsgi.ini
docker/api_ci/: Dockerfile  create_default_flavor.sh  poppy.conf  start_poppy.sh  uwsgi.ini
docker/api_dev/: Dockerfile  Dockerfile.ci  README.md  dev  dev_mimic  fig_mimic.yml  init.sh  logging.conf  poppy.conf  uwsgi.ini
docker/cassandra/: Dockerfile  README.md  init.sh
docker/cassandra-cdn/: Dockerfile  shutdown.sh
docker/compose/: README.md  dependencies.yml  full_stack.yml  poppy_stack.yml  poppy_stack_mocked.yml
docker/e2e_test/: .dockerignore  Dockerfile  README.md
docker/fig/: README.md  dev  dev_mimic  fig.yml  fig_cassandra.yml  fig_dev.yml  fig_mimic.yml
docker/mimic/: Dockerfile  README.md  akamai.conf  cloudfront.conf  fastly.conf  maxcdn.conf
docker/repose/: Dockerfile  README.md  init.sh
etc/: cdn.conf  logging.conf  poppy.conf
hadoop/: README.rst  log_delivery.pig
poppy/: bootstrap.py  version.py
poppy/cmd/: akamai_check_and_update_cert_status.py  akamai_update_papi_property_for_mod_san.py  delete_obsolete_http_policies.py  run_background_flow.py  server.py  task_flow_worker.py
poppy/common/: _i18n.py  cli.py  decorators.py  errors.py  uri.py  util.py
poppy/model/: common.py  flavor.py  log_delivery.py  service.py  ssl_certificate.py
poppy/transport/: __init__.py  app.py  base.py
requirements/: common.txt  docs.txt  requirements.txt
requirements/distributed_task/: taskflow.txt
requirements/dns/: racksapce.txt
requirements/metrics/: blueflood.txt
requirements/provider/: akamai.txt  cloudfront.txt  fastly.txt  maxcdn.txt
requirements/queue/: zaqar.txt
requirements/storage/: cassandra.txt  mongo.txt
requirements/transport/: falcon.txt  pecan.txt
specs/: poppy_ui.rst
taskflow/types/: entity.py
tests/: __init__.py  base.py  config.py  test-requirements.txt
tests/api/: README.rst  base.py  providers.py  requirements.txt
tests/benchmark/: README.rst  poppy-bench.py
tests/endtoend/: README.rst  base.py  test_caching.py  test_cdn_website.py  test_geo_restrictions.py  test_host_headers.py  test_ip_restrictions.py  test_multiple_origin.py  test_origin_headers.py  test_purge.py  test_referrer_restriction.py  test_ssl_enabled.py  wordpress-single.yaml
tests/etc/: api.conf  api.conf~  api_tests.conf  bootstrap_unit.conf  cdn_mockdb.conf  default_functional.conf  endtoend.conf  functional.conf  pecan.py  poppy_cassandra.conf  poppy_mockdb.conf
tests/functional/: base.py
tests/performance/: perf_config.py  poppy-baseline.py  poppy-perf.config.sample  poppy_baseline.py
tests/test_validator/: config.py  test_service_validation.py  test_stoplight_validation.py
tests/unit/: test_bootstrap.py
tools/: colorizer.py
(+715 files in other folders)
