[metadata]
name = poppycdn
version = 2014.11
summary = A modular, vendor-neutral API, that wraps provisioning instructions for all CDN vendors that support it.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    poppy

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    poppy-server = poppy.cmd.server:run

poppy.transport =
    falcon = poppy.transport.falcon:Driver
    pecan = poppy.transport.pecan:Driver

poppy.manager =
    default = poppy.manager.default:Driver

poppy.storage =
    mongodb = poppy.storage.mongodb:Driver
    cassandra = poppy.storage.cassandra:Driver
    mockdb = poppy.storage.mockdb:Driver

poppy.provider =
    fastly = poppy.provider.fastly:Driver
    mock = poppy.provider.mock:Driver
    cloudfront = poppy.provider.cloudfront:Driver
    maxcdn = poppy.provider.maxcdn:Driver

[wheel]
universal = 1

[nosetests]
cover-branches = true
cover-erase = true
cover-inclusive = true
#cover-min-percentage = 100
cover-package = poppy
#match = ^test
where = tests
with-coverage = true
verbosity=2

; Disabled: Causes a bug in testtools to manifest.
; Trigger: self.assertX(condition), where condition == False.
;
; In "testtools/testresult/real.py" the traceback is set to
; None in _details_to_exc_info(), but the inspect_traceback()
; method in nose/inspector.py requires a traceback-like object.
;
; detailed-errors = 1
