[metadata]
name = poppycdn
version = 2015.1
summary = A modular, vendor-neutral API, that wraps provisioning instructions for all CDN vendors that support it.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    poppy

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[entry_points]
console_scripts =
    poppy-server = poppy.cmd.server:run
    poppy-worker = poppy.cmd.task_flow_worker:run
    akmai-cert-status-check-and-update = poppy.cmd.akamai_check_and_update_cert_status:run
    akamai-property-udpate-mod-san = poppy.cmd.akamai_update_papi_property_for_mod_san:run

poppy.transport =
    pecan = poppy.transport.pecan:Driver

poppy.manager =
    default = poppy.manager.default:Driver

poppy.dns =
    default = poppy.dns.default:Driver
    designate = poppy.dns.designate:Driver
    rackspace = poppy.dns.rackspace:Driver

poppy.storage =
    cassandra = poppy.storage.cassandra:Driver
    mockdb = poppy.storage.mockdb:Driver

poppy.provider =
    fastly = poppy.provider.fastly:Driver
    mock = poppy.provider.mock:Driver
    cloudfront = poppy.provider.cloudfront:Driver
    maxcdn = poppy.provider.maxcdn:Driver
    akamai = poppy.provider.akamai:Driver

poppy.distributed_task =
    taskflow = poppy.distributed_task.taskflow:Driver

poppy.notification =
    mailgun = poppy.notification.mailgun:Driver

poppy.provider.akamai.san_info_storage =
    zookeeper = poppy.provider.akamai.san_info_storage.zookeeper_storage:ZookeeperSanInfoStorage
    cassandra = poppy.provider.akamai.san_info_storage.cassandra_storage:CassandraSanInfoStorage



[wheel]
universal = 1

[nosetests]
cover-branches = true
cover-erase = true
cover-inclusive = true
#cover-min-percentage = 100
cover-package = poppy
#match = ^test
where = tests
with-coverage = true
verbosity=2

; Disabled: Causes a bug in testtools to manifest.
; Trigger: self.assertX(condition), where condition == False.
;
; In "testtools/testresult/real.py" the traceback is set to
; None in _details_to_exc_info(), but the inspect_traceback()
; method in nose/inspector.py requires a traceback-like object.
;
; detailed-errors = 1
